--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ threadpool = "1.8.1"
 num_cpus = "1.16.0"
 ring = "0.17.8"
 rayon = "1.10.0"
+glob = "0.3.1"
+image = "0.25.2"
+data-encoding = "2.6.0"
