--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,12 @@ rayon = "1.10.0"
 glob = "0.3.1"
 image = "0.25.2"
 data-encoding = "2.6.0"
+bitflags = "2.6.0"
+rusqlite = "0.32.1"
+chrono = "0.4.38"
+log = "0.4.22"
+env_logger = "0.11.5"
+syslog = "7.0.0"
+percent-encoding = "2.3.1"
+url = "2.5.2"
+csv = "1.3.0"
