--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,3 +30,8 @@ syslog = "7.0.0"
 percent-encoding = "2.3.1"
 url = "2.5.2"
 csv = "1.3.0"
+serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
+toml = "0.8.19"
+error-chain = "0.12.4"
+reqwest = { version = "0.12.7", features = ["blocking"] }
