finish file system lessons

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,6 @@ serde_json = "1.0.128"
 toml = "0.8.19"
 error-chain = "0.12.4"
 reqwest = { version = "0.12.7", features = ["blocking"] }
+same-file = "1.0.6"
+memmap = "0.7.0"
+regex = "1.10.6"
