--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,6 @@ reqwest = { version = "0.12.7", features = ["blocking"] }
 same-file = "1.0.6"
 memmap = "0.7.0"
 regex = "1.10.6"
+ndarray = { version = "0.16.1", features = ["approx"] }
+approx = "0.5.1"
+nalgebra = { version = "0.33.0", features = ["serde-serialize", "serde"] }
