--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,4 @@ regex = "1.10.6"
 ndarray = { version = "0.16.1", features = ["approx"] }
 approx = "0.5.1"
 nalgebra = { version = "0.33.0", features = ["serde-serialize", "serde"] }
+num = "0.4.3"
